# tauri-m3u8-downloader

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  main.rs
src-tauri/src/commands/: check_commands.rs  fs_commands.rs  job_commands.rs  mod.rs  settings_commands.rs
src-tauri/src/services/: download_services.rs  job_services.rs  media_services.rs  mod.rs  settings_services.rs
src-tauri/src/types/: app_settings.rs  app_state.rs  check_media_result.rs  create_job_result.rs  download_job.rs  log_category.rs  log_level.rs  log_update.rs  m3u8_playlist.rs  mod.rs  target_file_status.rs  track_type.rs
src-tauri/src/utils/: audio_utils.rs  crypto_utils.rs  event_utils.rs  fs_utils.rs  json_utils.rs  logging_utils.rs  m3u8_utils.rs  mod.rs  network_utils.rs  path_utils.rs  string_utils.rs  time_utils.rs
src/assets/: main.css
src/components/: DownloadsList.vue  DownloadsToolbar.vue  GlobalStatusBar.vue  JobLogViewer.vue  NewJobDialog.vue
src/composables/: useAppClose.ts  useFileCheck.ts  useFormatters.ts  useJobLogs.ts  useJobMenu.ts  useJobs.ts  useNewJob.ts  useSettings.ts  useThroughputGraph.ts
src/views/: DownloadsTab.vue  SettingsTab.vue
